outputs/csi300-test/2025-07-27_19-20-21/evaluations/problem_eval6711980883494211790_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 8
    df['RSI'] = 100 - (100 / (1 + (df['close'].diff().where(df['close'].diff() > 0, 0).rolling(window=14).mean() / -df['close'].diff().where(df['close'].diff() < 0, 0).rolling(window=14).mean()))
                      ^
SyntaxError: '(' was never closed
